# cpp-skeleton

./: CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  bm_app.cpp
include/: Person.h  TimeCounter.h
src/: main.cpp
test/: CMakeLists.txt  test_main.cpp
